Bug 39089. Paint over the problem by special-casing 'javascript:' URIs. r=mscott